Should be working

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "BCI-Beats"]
 	path = BCI-Beats
 	url = https://github.com/BCI-Beats-NatHacks/BCI-Beats.git
+[submodule "OpenBCI_LSL"]
+	path = OpenBCI_LSL
+	url = https://github.com/openbci-archive/OpenBCI_LSL.git
